--- a/style.css
+++ b/style.css
@@ -2,5 +2,61 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 24px;
+    display: flex;
+    gap: 19px;
+    justify-content: center;
     
 }
+#rock, #scissor, #paper{
+    font-size: 89px;
+    padding: 20px;
+    background: none;
+    border: none;
+    outline: none; 
+    cursor: pointer;
+    transition: 120ms;
+    
+}
+.resultText{
+    font-size: 24px;
+    font-family: fantasy;
+}
+.refreshBtn{
+    display: inline-block;
+    background: none;
+    color: solid black;
+    border: none;
+    outline: none;
+    font-size: xx-large;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    transition: 90ms;
+}
+.refreshBtn:hover{
+    transform: scale(1.1);
+}
+#rock:hover, #paper:hover, #scissor:hover{
+    transform: scale(1.2);
+}
+
+#displayScore , .heading{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.score{
+font-family: monospace, sans-serif;
+font-size: 17px;
+
+}
+
+.resultContainer, #reload {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto
+    
+}
+
+
